Completing README.md file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <span>Action</span>
       </div>
       <div class="info">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae reiciendis ex commodi magnam doloremque explicabo.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae reiciendis ex commodi magnam doloremque explicabo...</p>
       </div>
       <div class="cast">
         <h4>Cast</h4>
